# rust-bn254-hash

./: .gitignore  Cargo.toml  README.md
benches/: iterated_perm.rs
reference/: README.md
reference/src/: BN254.hs  Hash.hs  Permutation.hs  RoundConsts.hs  Sponge.hs  U64.hs
reference/src/Griffin/: Permutation.hs  RoundConsts.hs
reference/src/Poseidon2/: Permutation.hs  RoundConsts.hs
reference/src/Skyscraper/: FieldExt.hs  KATs.hs  Permutation.hs  RoundConst.hs
src/: constants.rs  dom_sep.rs  hash.rs  lib.rs  permutation.rs  poseidon2.rs  sponge.rs  state.rs  words.rs
src/griffin/: constants.rs  mod.rs  permutation.rs
src/poseidon2/: permutation.rs
src/skyscraper/: constants.rs  mod.rs  permutation.rs
