[package]
name    = "rust-bn254-hash"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
lazy_static = { version = "1.5.0" }
ark-std     = { version = "0.5.0" }
ark-ff      = { version = "0.5.0" }
ark-bn254   = { version = "0.5.0" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "iterated_perm"
harness = false